# tapak

./: .envrc  .gitignore  .ocamlformat  CONTRIBUTING.md  DEV.md  LICENSE  README.md  dune-project  flake.nix  release.nix  sch.opam  simdutf.opam  tapak-compressions.opam  tapak-ppx.opam  tapak.opam
.github/: FUNDING.yml
.github/workflows/: docs.yml  nix.yml  opam.yml
bench/: dune  route_bench.ml
doc/: SETUP.md  architecture.mld  dune  index.mld  kernel.mld  middleware.mld  router.mld
examples/body-parsing/: dune  main.ml
examples/custom-extractor/: dune  main.ml
examples/error-handling/: dune  main.ml
examples/live-cursors/: dune  main.ml
examples/live-cursors/static/: index.html
examples/openapi/: dune  main.ml
examples/ppx/: django_style.ml  dune  main.ml
examples/reason/: dune  main.re
examples/request-guard/: dune  main.ml
examples/showcase/: COMPRESSION_QUICK_REF.md  COMPRESSION_TESTING.md  README.md  dune  main.ml  test_compression.sh  test_data.json
examples/sse-chat/: dune  main.ml
examples/static-files/: dune  main.ml
examples/static-files/public/: about.html  about.html.br  index.html  index.html.br
examples/static-files/public/assets/: app.js  app.js.br  style.css  style.css.br
nix/: default.nix  shell.nix
nix/ci/: test.nix
nix/overlays/: default.nix  development.nix
pkg/channel/src/: dune  tapak_channel.ml  tapak_channel.mli
pkg/channel/test/: dune  test.ml
pkg/compressions/src/: brotli.ml  brotli.mli  brotli_compressor.ml  brotli_decompressor.ml  brotli_stubs.c  bytesrw_brotli.ml  dune  gzip.ml  predicate.ml  predicate.mli  tapak_compressions.ml  zstd.ml  zstd_compressor.ml  zstd_decompressor.ml  zstd_stubs.c
pkg/compressions/src/config/: discover.ml  dune
pkg/compressions/test/: debug_gzip.ml  dune  test.ml  test_brotli.ml  test_bytesrw_brotli.ml  test_gzip.ml  test_zstd.ml
pkg/kernel/: dune  middleware.mli  request_info.mli  response.ml  router.ml  server_connection.ml  tapak_kernel.ml  tapak_kernel.mli
pkg/kernel/src/: app.ml  app.mli  body.ml  body.mli  dune  filter.ml  filter.mli  form.ml  form.mli  handler.ml  handler.mli  middleware.ml  middleware.mli  request.ml  request.mli  request_guard.ml  request_guard.mli  request_info.mli  response.ml  response.mli  router.ml  router.mli  schema.ml  schema.mli  server_connection.ml  server_connection.mli  service.ml  span.ml  tapak_kernel.ml  tapak_kernel.mli
pkg/kernel/src/schema/: schema_constraint.ml  schema_headers.ml  schema_patterns.ml
pkg/kernel/test/: dune  test.ml  test_form.ml  test_router.ml  test_schema.ml
pkg/ppx/: README.md
pkg/ppx/src/: dune  tapak_ppx.ml
pkg/ppx/test/: dune  ppx.sh
pkg/ppx/test/route-any.t/: input.ml  run.t
pkg/ppx/test/route-basic.t/: input.ml  run.t
pkg/ppx/test/route-circular.t/: input.ml  run.t
pkg/ppx/test/route-django.t/: input.ml  run.t
pkg/ppx/test/route-splat.t/: input.ml  run.t
pkg/ppx/test/route-unit.t/: input.ml  run.t
pkg/sch/src/: ci.ml  dune  file.ml  free.ml  free.mli  json_schema.ml  json_schema.mli  sch.ml  sch.mli  sig.ml  sig.mli
pkg/sch/src/json_schema/: json_schema_constraint.ml  json_schema_constraint.mli
pkg/sch/test/: dune  test_sch.ml
pkg/simdutf/binding_types/: dune  simdutf_bindings_types.ml
pkg/simdutf/bindings/: dune  simdutf_bindings.ml
pkg/simdutf/c/: README.md  download_simdutf.sh  dune  simdutf.cpp  simdutf.h  simdutf_capi.cpp  simdutf_capi.h
pkg/simdutf/config/: discover.ml  dune
pkg/simdutf/ffi/: dune  simdutf_ffi.ml
pkg/simdutf/lib/: dune  simdutf.ml  simdutf.mli
pkg/simdutf/stubgen/: dune  simdutf_stubgen.ml  simdutf_types_stubgen.ml
pkg/simdutf/test/: dune  test.ml
pkg/simdutf/types/: dune  simdutf_types.ml
src/: app.ml  app.mli  body.ml  body.mli  bytesrw_util.ml  channel.ml  channel.mli  channel_effect.ml  context.ml  context.mli  cookies.ml  csrf.ml  csrf.mli  dune  filter.ml  filter.mli  form.ml  form.mli  handler.ml  handler.mli  header_parser.ml  header_parser.mli  headers.ml  headers.mli  http_date.ml  http_date.mli  imports.ml  lru.ml  middleware.ml  middleware.mli  openapi.ml  openapi.mli  presence.ml  presence.mli  pubsub.ml  pubsub.mli  random.ml  request.ml  request.mli  request_guard.ml  (+23 more)
src/middleware/: Middleware_compression.ml  Middleware_decompression.ml  middleware_compression.ml  middleware_cors.ml  middleware_decompression.ml  middleware_head.ml  middleware_limit_request_size.ml  middleware_logger.ml
src/openapi/: openapi_spec.ml
src/socket/: socket_endpoint.ml  socket_protocol.ml  socket_protocol.mli
test/: dune  test.ml  test_channel.ml  test_cookies.ml  test_csrf.ml  test_form.ml  test_header_parser.ml  test_middleware_compression.ml  test_middleware_cors.ml  test_openapi.ml  test_request.ml  test_router.ml  test_schema.ml  test_sse.ml  test_static.ml
