(library
 (name tapak)
 (public_name tapak)
 (libraries
  piaf
  magic-mime
  ptime
  eio
  bytesrw
  ipaddr
  yojson
  jsont
  jsont.bytesrw
  str
  logs
  mirage-crypto
  mirage-crypto-rng
  mirage-crypto-rng.unix
  uri
  hmap
  re
  saturn
  httpun-ws
  bigstringaf
  angstrom))

(include_subdirs unqualified)
