(library
 (name tapak)
 (public_name tapak)
 (libraries
  http
  cohttp-eio
  cows
  magic-mime
  ptime
  eio
  bytesrw
  ipaddr
  jsont
  jsont.bytesrw
  str
  logs
  multipart_form
  mirage-crypto
  mirage-crypto-rng
  mirage-crypto-rng.unix
  uri
  hmap
  re
  sch
  saturn
  angstrom))

(include_subdirs unqualified)
