(executable
 (name main)
 (modules main)
 (public_name tapak-ppx-examples)
 (libraries tapak eio_main piaf logs logs.fmt fmt.tty logs.threaded)
 (package tapak)
 (enabled_if
  (= %{profile} dev))
 (preprocess
  (pps tapak-ppx))
 (flags
  (:standard -w -27-32)))

(executable
 (name django_style)
 (modules django_style)
 (libraries tapak)
 (preprocess
  (pps tapak-ppx))
 (flags
  (:standard -w -27-32)))
