(library
 (name tapak_compressions)
 (public_name tapak-compressions)
 (libraries tapak bytesrw bytesrw.zlib bytesrw.zstd)
 (foreign_stubs
  (language c)
  (names brotli_stubs)
  (flags
   (:standard
    (:include ./config/c_flags.sexp))))
 (c_library_flags
  (:standard
   (:include ./config/c_library_flags.sexp))))
